3.4.3/_sources/gallery/subplots_axes_and_figures/geo_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/geo_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_geo_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_geo_demo.py:


======================
Geographic Projections
======================

This shows 4 possible geographic projections.  Cartopy_ supports more
projections.

.. _Cartopy: http://scitools.org.uk/cartopy

.. GENERATED FROM PYTHON SOURCE LINES 11-14

.. code-block:: default


    import matplotlib.pyplot as plt








.. GENERATED FROM PYTHON SOURCE LINES 15-21

.. code-block:: default


    plt.figure()
    plt.subplot(projection="aitoff")
    plt.title("Aitoff")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_001.png
    :alt: Aitoff
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 22-28

.. code-block:: default


    plt.figure()
    plt.subplot(projection="hammer")
    plt.title("Hammer")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_002.png
    :alt: Hammer
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 29-35

.. code-block:: default


    plt.figure()
    plt.subplot(projection="lambert")
    plt.title("Lambert")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_003.png
    :alt: Lambert
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-43

.. code-block:: default


    plt.figure()
    plt.subplot(projection="mollweide")
    plt.title("Mollweide")
    plt.grid(True)

    plt.show()



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_004.png
    :alt: Mollweide
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.201 seconds)


.. _sphx_glr_download_gallery_subplots_axes_and_figures_geo_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: geo_demo.py <geo_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: geo_demo.ipynb <geo_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
